# Excavator

./: .gitignore  README.md
Kicad/Linear_Acuator_Control/: Linear_Acuator_Control(1).kicad_pcb  Linear_Acuator_Control-B_Cu.gbr  Linear_Acuator_Control-B_Fab.gbr  Linear_Acuator_Control-B_Mask.gbr  Linear_Acuator_Control-B_Paste.gbr  Linear_Acuator_Control-B_Silkscreen.gbr  Linear_Acuator_Control-Edge_Cuts.gbr  Linear_Acuator_Control-F_Cu.gbr  Linear_Acuator_Control-F_Fab.gbr  Linear_Acuator_Control-F_Mask.gbr  Linear_Acuator_Control-F_Paste.gbr  Linear_Acuator_Control-F_Silkscreen.gbr  Linear_Acuator_Control-NPTH.drl  Linear_Acuator_Control-PTH.drl  Linear_Acuator_Control-job.gbrjob  Linear_Acuator_Control.csv  Linear_Acuator_Control.kicad_pcb  Linear_Acuator_Control.kicad_prl  Linear_Acuator_Control.kicad_pro  Linear_Acuator_Control.kicad_sch  Linear_Acuator_Control.kicad_sch-bak  fp-info-cache  fp-lib-table  sym-lib-table  ~Linear_Acuator_Control.kicad_pcb.lck
Kicad/Linear_Acuator_Control/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
src/excavator_kinematics/: package.xml  setup.cfg  setup.py
src/excavator_kinematics/config/: excavator_params.yaml
src/excavator_kinematics/excavator_kinematics/: excavator_keyboard_node.py  excavator_state_node.py  excavator_visualization_node.py  kinematics_model.py  state_codec.py
src/excavator_kinematics/launch/: excavator_gz_sim_gui.launch.py
src/excavator_kinematics/resource/: excavator_kinematics
src/excavator_kinematics/test/: test_kinematics_model.py
src/excavator_kinematics/urdf/: excavator.urdf
