<?xml version="1.0"?>
<package format="3">
  <name>excavator_kinematics</name>
  <version>0.1.0</version>
  <description>ROS 2 Humble kinematics and telemetry node for the MARS Excavator front loader bucket.</description>
  <maintainer email="mars@mq.edu.au">MARS</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>
  <depend>robot_state_publisher</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>rosgraph_msgs</depend>

  <test_depend>ament_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
